unpackaged/main/default/objects/Account/fields/AccountManager__c.field-meta.xml
<CustomField>
    <fullName>AccountManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is created as part of SAL-464 : Account Management - Billing Information</description>
    <label>Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>