unpackaged/main/default/objects/Account/fields/BillCode__c.field-meta.xml
<CustomField>
    <fullName>BillCode__c</fullName>
    <description>This field is created as part of SAL-464 : Account Management - Billing Information</description>
    <label>Bill Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>