unpackaged/main/default/objects/Account/fields/BIN__c.field-meta.xml
<CustomField>
    <fullName>BIN__c</fullName>
    <description>This field is created as part of SAL-464 : Account Management - Billing Information</description>
    <label>BIN #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>