unpackaged/main/default/objects/Account/fields/CSTNumber__c.field-meta.xml
<CustomField>
    <fullName>CSTNumber__c</fullName>
    <description>#SAL-466 - Used to align accounts to CSTs. (BioPharma record type only)</description>
    <inlineHelpText>Used to align accounts to CSTs.</inlineHelpText>
    <label>CST Number</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CST 1</fullName>
            </value>
            <value>
                <fullName>CST 2</fullName>
            </value>
            <value>
                <fullName>CST 3</fullName>
            </value>
            <value>
                <fullName>CST 4</fullName>
            </value>
            <value>
                <fullName>CST 5</fullName>
            </value>
            <value>
                <fullName>CST 6</fullName>
            </value>
            <value>
                <fullName>CST 7</fullName>
            </value>
            <value>
                <fullName>CST 8</fullName>
            </value>
            <value>
                <fullName>CST 9</fullName>
            </value>
            <value>
                <fullName>CST 10</fullName>
            </value>
            <value>
                <fullName>CST 11</fullName>
            </value>
            <value>
                <fullName>CST 12</fullName>
            </value>
            <value>
                <fullName>3PL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>