unpackaged/main/default/objects/Account/fields/CustomerTypeQ2C__c.field-meta.xml
<CustomField>
    <fullName>CustomerTypeQ2C__c</fullName>
    <label>CustomerTypeQ2C</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>