unpackaged/main/default/objects/Account/fields/ExistingeVoucherAdministration__c.field-meta.xml
<CustomField>
    <fullName>ExistingeVoucherAdministration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ExistingeVoucherAdministration</label>
    <type>Checkbox</type>
</CustomField>