unpackaged/main/default/objects/Account/fields/GroupRegion__c.field-meta.xml
<CustomField>
    <fullName>GroupRegion__c</fullName>
    <description>This field is created as part of SAL-464 : Account Management - Billing Information</description>
    <label>Group/Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>