unpackaged/main/default/objects/Account/fields/LegalName__c.field-meta.xml
<CustomField>
    <fullName>LegalName__c</fullName>
    <description>#SAL-466 - This field shows the legal name for this account, and also matches the name used in Legacy CMM&#39;s Salesforce instance (if found in Legacy CMM)</description>
    <inlineHelpText>This field shows the legal name for this account, and also matches the name used in Legacy CMM&#39;s Salesforce instance (if found in Legacy CMM)</inlineHelpText>
    <label>Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>