unpackaged/main/default/objects/Account/fields/MailingAddress__c.field-meta.xml
<CustomField>
    <fullName>MailingAddress__c</fullName>
    <description>This field is created as part of SAL-464 : Account Management - Billing Information</description>
    <label>Mailing Address</label>
    <type>Address</type>
</CustomField>