unpackaged/main/default/objects/Account/fields/MDM_Account_Rank__c.field-meta.xml
<CustomField>
    <fullName>MDM_Account_Rank__c</fullName>
    <description>SAL-467 - This is mastered field populated from MDM</description>
    <inlineHelpText>Used to keep track of and report on top accounts.</inlineHelpText>
    <label>Account Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>