unpackaged/main/default/objects/Account/fields/MDM_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>MDM_Customer_Type__c</fullName>
    <description>SAL-467 - This is mastered field populated from MDM</description>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CMM_CustomerType</valueSetName>
    </valueSet>
</CustomField>