unpackaged/main/default/objects/Account/fields/MDM_Legacy_RH_Name__c.field-meta.xml
<CustomField>
    <fullName>MDM_Legacy_RH_Name__c</fullName>
    <description>SAL-467 - This is mastered field populated from MDM</description>
    <inlineHelpText>Stores how this account was named in RelayHealth&#39;s legacy Salesforce instance to help users find accounts in case the name now looks different.</inlineHelpText>
    <label>Legacy RH Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>