unpackaged/main/default/objects/Account/fields/MDM_Master_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>MDM_Master_Record_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>SAL-467 - This is mastered field populated from MDM</description>
    <externalId>true</externalId>
    <inlineHelpText>MDM’s ID for a given account</inlineHelpText>
    <label>Master Record ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>