unpackaged/main/default/objects/Account/fields/MDM_Other_Names__c.field-meta.xml
<CustomField>
    <fullName>MDM_Other_Names__c</fullName>
    <description>SAL-467 - This is mastered field populated from MDM</description>
    <inlineHelpText>Any other names this account may be known by (e.g., former names, international names)</inlineHelpText>
    <label>Other Names</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>