unpackaged/main/default/objects/Account/fields/MDM_Parent__c.field-meta.xml
<CustomField>
    <fullName>MDM_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SAL-467 - This is mastered field populated from MDM</description>
    <inlineHelpText>Account hierarchy: This field is populated by the &quot;immediate&quot; or &quot;next highest&quot; parent in the hierarchy of the account whose page you&#39;re viewing.</inlineHelpText>
    <label>Parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Parent_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>