unpackaged/main/default/objects/Account/fields/MDM_System_Modstamp__c.field-meta.xml
<CustomField>
    <fullName>MDM_System_Modstamp__c</fullName>
    <description>#SAL-466 - This stores the last time updated from MDM.(It will not exist on any page layouts.)</description>
    <label>System Modstamp</label>
    <type>DateTime</type>
</CustomField>