unpackaged/main/default/objects/Account/fields/MDM_Ultimate_Parent__c.field-meta.xml
<CustomField>
    <fullName>MDM_Ultimate_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SAL-467 - This is mastered field populated from MDM</description>
    <inlineHelpText>Account hierarchy: This field is populated by the highest or &quot;ultimate&quot; parent in the hierarchy of the account whose page you&#39;re viewing.</inlineHelpText>
    <label>Ultimate Parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Ultimate Parent)</relationshipLabel>
    <relationshipName>Ultimate_Parent_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>