unpackaged/main/default/objects/Account/fields/NCPDP__c.field-meta.xml
<CustomField>
    <fullName>NCPDP__c</fullName>
    <description>This field is created as part of SAL-464 : Account Management - Billing Information</description>
    <label>NCPDP</label>
    <length>7</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>