unpackaged/main/default/objects/Account/fields/NetSuiteCategoryId__c.field-meta.xml
<CustomField>
    <fullName>NetSuiteCategoryId__c</fullName>
    <description>This field is created as part of SAL-464 : Account Management - Billing Information</description>
    <label>NetSuite Category Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>