unpackaged/main/default/objects/Account/fields/NPI__c.field-meta.xml
<CustomField>
    <fullName>NPI__c</fullName>
    <description>This field is created as part of SAL-464 : Account Management - Billing Information</description>
    <label>NPI</label>
    <length>10</length>
    <type>Text</type>
</CustomField>