unpackaged/main/default/objects/Account/fields/PPEBin__c.field-meta.xml
<CustomField>
    <fullName>PPEBin__c</fullName>
    <description>This field is created as part of SAL-464 : Account Management - Billing Information</description>
    <label>PPE Bin #</label>
    <length>8</length>
    <type>Text</type>
</CustomField>