unpackaged/main/default/objects/Account/fields/RiskReason__c.field-meta.xml
<CustomField>
    <fullName>RiskReason__c</fullName>
    <description>#SAL-466 Reason for account-level risk. Only required if Risk Level is Medium or High. (BioPharma record type only)</description>
    <inlineHelpText>Reason for account-level risk. Only required if Risk Level is Medium or High.</inlineHelpText>
    <label>Risk Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>