unpackaged/main/default/objects/Account/fields/SampleTest__c.field-meta.xml
<CustomField>
    <fullName>SampleTest__c</fullName>
    <label>SampleTest</label>
    <length>20</length>
    <type>Text</type>
</CustomField>