unpackaged/main/default/objects/Account/fields/SAPBillToNumber__c.field-meta.xml
<CustomField>
    <fullName>SAPBillToNumber__c</fullName>
    <description>This field is created as part of SAL-464 : Account Management - Billing Information</description>
    <label>SAP Bill-to Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>