unpackaged/main/default/objects/Account/fields/SoldToEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>SoldToEmailAddress__c</fullName>
    <description>This field is created as part of SAL-464 : Account Management - Billing Information</description>
    <label>Sold To Email Address</label>
    <type>Email</type>
</CustomField>