unpackaged/main/default/objects/Account/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <description>This field is created as part of SAL-464 : Account Management - Billing Information</description>
    <label>Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>340B</fullName>
            </value>
            <value>
                <fullName>Long Term Care</fullName>
            </value>
            <value>
                <fullName>Mail Order</fullName>
            </value>
            <value>
                <fullName>PBM - OP</fullName>
            </value>
            <value>
                <fullName>Processor</fullName>
            </value>
            <value>
                <fullName>Recon</fullName>
            </value>
            <value>
                <fullName>Specialty Pharma</fullName>
            </value>
            <value>
                <fullName>Specialty Pharmacy</fullName>
            </value>
            <value>
                <fullName>TrOOP</fullName>
            </value>
            <value>
                <fullName>Digital Pharmacy</fullName>
            </value>
            <value>
                <fullName>Saving SeekerRX Channel Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>