unpackaged/main/default/objects/Account/recordTypes/Other.recordType-meta.xml
<RecordType>
    <fullName>Other</fullName>
    <active>true</active>
    <description>Other record type that controls visibility for Other users</description>
    <label>Other</label>
</RecordType>