unpackaged/main/default/objects/Account/validationRules/CMM_VR02_FieldsEditableOnlyBySalesOps.validationRule-meta.xml
<ValidationRule>
    <fullName>CMM_VR02_FieldsEditableOnlyBySalesOps</fullName>
    <active>true</active>
    <description>#SAL-466 - The fields like Record Type, Owner and Name are only editable by Sales Ops</description>
    <errorConditionFormula>AND(
	NOT( $Setup.CMM_ObjectSaveMode__c.IsVRBypassed__c ),
	OR(
		AND(
			$Permission.CMM_HasSalesOpsPermission,
			ISCHANGED( Name ),
			RecordType.Name != &#39;Other&#39;
		),
		
		AND(
			NOT( $Permission.CMM_HasSalesOpsPermission ),
			OR(
				ISCHANGED( OwnerId ),
				ISCHANGED( RecordTypeId ),
				ISCHANGED( Name )
			)
		)
	)
)</errorConditionFormula>
    <errorMessage>You don’t have permissions to change the Name, Owner and Record Type for this account.</errorMessage>
</ValidationRule>